--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,30 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# PostgreSQL. Versions 9.3 and up are supported.
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# Install the pg driver:
+#   gem install pg
+# On OS X with Homebrew:
+#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
+# On OS X with MacPorts:
+#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
+# On Windows:
+#   gem install pg
+#       Choose the win32 build.
+#       Install PostgreSQL and put its /bin directory on your path.
 #
+# Configure Using Gemfile
+# gem 'pg'
+#
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  # Make sure the connection is evaluated as "network" connection rather than
+  # Unix socket connection. Rules are in pg_hba.conf.
+  host: 127.0.0.1
+
+  username: kriging_city_user
+  password: kriging_city_pass
+
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
