--- a/krigingCityMap/package.json
+++ b/krigingCityMap/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@asymmetrik/ngx-leaflet": "^2.5.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^0.2.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
